peft of medgemma on nct-crc-he100k + evaluation + demo

--- a/src/peft_medgemma_4b_it_nih_cxr_pneumonia.ipynb
+++ b/src/peft_medgemma_4b_it_nih_cxr_pneumonia.ipynb
@@ -613,7 +613,7 @@
     "# augmented_assistant_message = test_instance_base.chat(augmented_messages)\n",
     "augmented_assistant_message = test_instance_base.chat_v1(augmented_messages, dataset[\"test\"][-7][\"image\"])\n",
     "\n",
-    "print(f\"Augmented-tuned assistant message:{ft_assistant_message}\")"
+    "print(f\"Augmented-tuned assistant message:{augmented_assistant_message}\")"
    ]
   },
   {
@@ -719,7 +719,7 @@
     }
    ],
    "source": [
-    "from src.evaluate_medgemma_49_it_nih_pneumonia_chest_x_ray import evaluate_medgemma_4b_it_nih_pneumonia_chest_x_ray\n",
+    "from src.evaluate_medgemma_4b_it_nih_pneumonia_chest_x_ray import evaluate_medgemma_4b_it_nih_pneumonia_chest_x_ray\n",
     "\n",
     "model_kwargs = config_medgemma_4b_it_nih_cxr.model_kwargs\n",
     "evaluator = evaluate_medgemma_4b_it_nih_pneumonia_chest_x_ray(\n",
