To fix import in the notebooks, add a toml file to make it installable. Potentially messed up the imports. Will be fixed soon. README.md updated

--- a/notebooks/peft_medgemma_4b_it_nih_cxr_pneumonia.ipynb
+++ b/notebooks/peft_medgemma_4b_it_nih_cxr_pneumonia.ipynb
@@ -10,8 +10,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/venv/main/bin/python\n",
-      "/venv/main\n"
+      "/opt/homebrew/Caskroom/miniforge/base/envs/torchLM/bin/python\n",
+      "/opt/homebrew/Caskroom/miniforge/base/envs/torchLM\n"
      ]
     }
    ],
@@ -19,6 +19,34 @@
     "import sys\n",
     "print(sys.executable)\n",
     "print(sys.prefix)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "07709399",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "648aa7d3",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/opt/homebrew/Caskroom/miniforge/base/envs/torchLM/lib/python3.11/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n",
+      "Note: Environment variable`HF_TOKEN` is set and is the current active token independently from the token you've just configured.\n"
+     ]
+    }
+   ],
+   "source": [
+    "import config.config_medgemma_4b_it_nih_cxr"
    ]
   },
   {
@@ -51,8 +79,8 @@
     "from datasets import load_dataset\n",
     "\n",
     "\n",
-    "from src.config import config_medgemma_4b_it_nih_cxr\n",
-    "from src.utils.fetch_data import load_data_chest_xray_pneumonia\n"
+    "import config.config_medgemma_4b_it_nih_cxr\n",
+    "import utils.load_data_chest_xray_pneumonia\n"
    ]
   },
   {
@@ -109,10 +137,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from src.utils.data_utils import format_data_medgemma_nih_chest_x_ray\n",
-    "from src.utils.model_utils import load_model_and_processor\n",
-    "from src.config import config_medgemma_4b_it_nih_cxr\n",
-    "from src.peft_medgemma_4b_it_nih_pneumonia_chest_x_ray import fine_tune_medgemma_nih_pneumonia_chest_x_ray\n",
+    "from utils.data_utils import format_data_medgemma_nih_chest_x_ray\n",
+    "from utils.model_utils import load_model_and_processor\n",
+    "from config import config_medgemma_4b_it_nih_cxr\n",
+    "from peft_medgemma_4b_it_nih_pneumonia_chest_x_ray import fine_tune_medgemma_nih_pneumonia_chest_x_ray\n",
     "\n",
     "# Format the dataset\n",
     "formatted_dataset = dataset.map(format_data_medgemma_nih_chest_x_ray)\n",
@@ -155,7 +183,7 @@
     }
    ],
    "source": [
-    "from src.utils.model_utils import download_model_and_processor\n",
+    "from utils.model_utils import download_model_and_processor\n",
     "base_model, processor = download_model_and_processor(\n",
     "    model_id=config_medgemma_4b_it_nih_cxr.base_model_id,\n",
     "    save_directory=config_medgemma_4b_it_nih_cxr.model_folder_base,\n",
@@ -402,8 +430,8 @@
     }
    ],
    "source": [
-    "from src.test_medgemma_49_it_nih_pneumonia_chest_x_ray import test_medgemma_4b_it_nih_pneumonia_chest_x_ray\n",
-    "from src.utils.prompt_utils import make_prompt_without_image\n",
+    "from test_medgemma_49_it_nih_pneumonia_chest_x_ray import test_medgemma_4b_it_nih_pneumonia_chest_x_ray\n",
+    "from utils.prompt_utils import make_prompt_without_image\n",
     "\n",
     "\n",
     "test_instance_base = test_medgemma_4b_it_nih_pneumonia_chest_x_ray(\n",
@@ -651,6 +679,29 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 5,
+   "id": "67d0974d",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'src'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mModuleNotFoundError\u001b[39m                       Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[5]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mevaluate_medgemma_4b_it_nih_pneumonia_chest_x_ray\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m evaluate_medgemma_4b_it_nih_pneumonia_chest_x_ray\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m~/dev/meda/src/evaluate_medgemma_4b_it_nih_pneumonia_chest_x_ray.py:4\u001b[39m\n\u001b[32m      1\u001b[39m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mgc\u001b[39;00m\n\u001b[32m      3\u001b[39m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mtorch\u001b[39;00m\n\u001b[32m----> \u001b[39m\u001b[32m4\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01msrc\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01mutils\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m model_utils\n\u001b[32m      5\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01msrc\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01mconfig\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m config_medgemma_4b_it_nih_cxr\n\u001b[32m      6\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01msrc\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01mutils\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01mfetch_data\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m load_data_chest_xray_pneumonia\n",
+      "\u001b[31mModuleNotFoundError\u001b[39m: No module named 'src'"
+     ]
+    }
+   ],
+   "source": [
+    "from evaluate_medgemma_4b_it_nih_pneumonia_chest_x_ray import evaluate_medgemma_4b_it_nih_pneumonia_chest_x_ray"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 22,
    "id": "c9b505c3-d9cc-4402-a640-6b512488e188",
    "metadata": {},
@@ -719,7 +770,7 @@
     }
    ],
    "source": [
-    "from src.evaluate_medgemma_4b_it_nih_pneumonia_chest_x_ray import evaluate_medgemma_4b_it_nih_pneumonia_chest_x_ray\n",
+    "from evaluate_medgemma_4b_it_nih_pneumonia_chest_x_ray import evaluate_medgemma_4b_it_nih_pneumonia_chest_x_ray\n",
     "\n",
     "model_kwargs = config_medgemma_4b_it_nih_cxr.model_kwargs\n",
     "evaluator = evaluate_medgemma_4b_it_nih_pneumonia_chest_x_ray(\n",
@@ -775,9 +826,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python3 (main venv)",
+   "display_name": "torchLM",
    "language": "python",
-   "name": "main"
+   "name": "torchlm"
   },
   "language_info": {
    "codemirror_mode": {
@@ -789,7 +840,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.11"
+   "version": "3.11.13"
   }
  },
  "nbformat": 4,
