--- a/notebooks/peft_medgemma_4b_it_nct_crc_he.ipynb
+++ b/notebooks/peft_medgemma_4b_it_nct_crc_he.ipynb
@@ -40,8 +40,8 @@
     "import os\n",
     "from datasets import load_dataset\n",
     "\n",
-    "from src.config import config_medgemma_4b_it_nct_crc_he\n",
-    "from src.utils.fetch_data import load_data_nct_crc_he\n"
+    "from config.config_medgemma_4b_it_nct_crc_he as config_medgemma_4b_it_nct_crc_he\n",
+    "from utils.fetch_data import load_data_nct_crc_he\n"
    ]
   },
   {
@@ -206,10 +206,10 @@
     }
    ],
    "source": [
-    "from src.utils.data_utils import format_data_medgemma_nct_crc_he\n",
-    "from src.utils.model_utils import load_model_and_processor\n",
-    "from src.config import config_medgemma_4b_it_nct_crc_he\n",
-    "from src.peft_medgemma_4b_it_nct_crc_he import fine_tune_medgemma_nct_crc_he\n",
+    "from utils.data_utils import format_data_medgemma_nct_crc_he\n",
+    "from utils.model_utils import load_model_and_processor\n",
+    "import config.config_medgemma_4b_it_nct_crc_he as config_medgemma_4b_it_nct_crc_he\n",
+    "from peft_medgemma_4b_it_nct_crc_he import fine_tune_medgemma_nct_crc_he\n",
     "\n",
     "# Format the dataset\n",
     "formatted_dataset = dataset.map(format_data_medgemma_nct_crc_he)\n",
@@ -409,9 +409,9 @@
     }
    ],
    "source": [
-    "from src.test_medgemma_49_it_nct_crc_he import test_medgemma_4b_it_nct_crc_he\n",
-    "from src.utils.prompt_utils import make_prompt_without_image\n",
-    "import src.config.config_medgemma_4b_it_nct_crc_he as config_medgemma_4b_it_nct_crc_he\n",
+    "from test_medgemma_49_it_nct_crc_he import test_medgemma_4b_it_nct_crc_he\n",
+    "from utils.prompt_utils import make_prompt_without_image\n",
+    "import config.config_medgemma_4b_it_nct_crc_he as config_medgemma_4b_it_nct_crc_he\n",
     "\n",
     "\n",
     "test_instance_base = test_medgemma_4b_it_nct_crc_he(\n",
@@ -823,9 +823,9 @@
     }
    ],
    "source": [
-    "from src.evaluate_medgemma_4b_it_nct_crc_he import evaluate_medgemma_4b_it_nct_crc_he\n",
-    "import src.config.config_medgemma_4b_it_nct_crc_he as config_medgemma_4b_it_nct_crc_he\n",
-    "from src.utils.fetch_data import load_data_nct_crc_he\n",
+    "from evaluate_medgemma_4b_it_nct_crc_he import evaluate_medgemma_4b_it_nct_crc_he\n",
+    "import config.config_medgemma_4b_it_nct_crc_he as config_medgemma_4b_it_nct_crc_he\n",
+    "from utils.fetch_data import load_data_nct_crc_he\n",
     "\n",
     "model_kwargs = config_medgemma_4b_it_nct_crc_he.model_kwargs\n",
     "evaluator = evaluate_medgemma_4b_it_nct_crc_he(\n",
@@ -921,9 +921,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python3 (main venv)",
+   "display_name": "torchLM",
    "language": "python",
-   "name": "main"
+   "name": "torchlm"
   },
   "language_info": {
    "codemirror_mode": {
@@ -935,7 +935,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.11"
+   "version": "3.11.13"
   }
  },
  "nbformat": 4,
