--- a/notebooks/peft_medgemma_4b_it_nih_cxr_pneumonia.ipynb
+++ b/notebooks/peft_medgemma_4b_it_nih_cxr_pneumonia.ipynb
@@ -23,34 +23,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "07709399",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "id": "648aa7d3",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/opt/homebrew/Caskroom/miniforge/base/envs/torchLM/lib/python3.11/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n",
-      "Note: Environment variable`HF_TOKEN` is set and is the current active token independently from the token you've just configured.\n"
-     ]
-    }
-   ],
-   "source": [
-    "import config.config_medgemma_4b_it_nih_cxr"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 2,
    "id": "7d800656-26f6-462a-bed4-ee86435f01d0",
    "metadata": {},
@@ -79,8 +51,8 @@
     "from datasets import load_dataset\n",
     "\n",
     "\n",
-    "import config.config_medgemma_4b_it_nih_cxr\n",
-    "import utils.load_data_chest_xray_pneumonia\n"
+    "import config.config_medgemma_4b_it_nih_cxr as config_medgemma_4b_it_nih_cxr\n",
+    "import utils.load_data_chest_xray_pneumonia as load_data_chest_xray_pneumonia\n"
    ]
   },
   {
@@ -139,7 +111,7 @@
    "source": [
     "from utils.data_utils import format_data_medgemma_nih_chest_x_ray\n",
     "from utils.model_utils import load_model_and_processor\n",
-    "from config import config_medgemma_4b_it_nih_cxr\n",
+    "import config.config_medgemma_4b_it_nih_cxr as config_medgemma_4b_it_nih_cxr\n",
     "from peft_medgemma_4b_it_nih_pneumonia_chest_x_ray import fine_tune_medgemma_nih_pneumonia_chest_x_ray\n",
     "\n",
     "# Format the dataset\n",
@@ -675,29 +647,6 @@
    "metadata": {},
    "source": [
     "## Evaluate and compare baseline and expert"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "id": "67d0974d",
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'src'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mModuleNotFoundError\u001b[39m                       Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[5]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mevaluate_medgemma_4b_it_nih_pneumonia_chest_x_ray\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m evaluate_medgemma_4b_it_nih_pneumonia_chest_x_ray\n",
-      "\u001b[36mFile \u001b[39m\u001b[32m~/dev/meda/src/evaluate_medgemma_4b_it_nih_pneumonia_chest_x_ray.py:4\u001b[39m\n\u001b[32m      1\u001b[39m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mgc\u001b[39;00m\n\u001b[32m      3\u001b[39m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mtorch\u001b[39;00m\n\u001b[32m----> \u001b[39m\u001b[32m4\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01msrc\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01mutils\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m model_utils\n\u001b[32m      5\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01msrc\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01mconfig\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m config_medgemma_4b_it_nih_cxr\n\u001b[32m      6\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01msrc\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01mutils\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01mfetch_data\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m load_data_chest_xray_pneumonia\n",
-      "\u001b[31mModuleNotFoundError\u001b[39m: No module named 'src'"
-     ]
-    }
-   ],
-   "source": [
-    "from evaluate_medgemma_4b_it_nih_pneumonia_chest_x_ray import evaluate_medgemma_4b_it_nih_pneumonia_chest_x_ray"
    ]
   },
   {
