Some fixes + WIP on a brain mri data

--- a/notebooks/peft_medgemma_4b_it_brain_mri.ipynb
+++ b/notebooks/peft_medgemma_4b_it_brain_mri.ipynb
@@ -40,8 +40,8 @@
     "import os\n",
     "from datasets import load_dataset\n",
     "\n",
-    "from config.config_medgemma_4b_it_nct_crc_he as config_medgemma_4b_it_nct_crc_he\n",
-    "from utils.fetch_data import load_data_nct_crc_he\n"
+    "from config.config_medgemma_4b_it_brain_mri as config_medgemma_4b_it_brain_mri\n",
+    "from utils.fetch_data import load_data_brain_mri\n"
    ]
   },
   {
@@ -116,7 +116,7 @@
     }
    ],
    "source": [
-    "dataset = load_data_nct_crc_he(test_size=0.025, val_size=0.025, max_examples=25000)\n",
+    "dataset = load_data_brain_mri(test_size=0.05, val_size=0.05, max_examples=None)\n",
     "print(dataset)"
    ]
   },
@@ -206,19 +206,19 @@
     }
    ],
    "source": [
-    "from utils.data_utils import format_data_medgemma_nct_crc_he\n",
+    "from utils.data_utils import format_data_medgemma_brain_mri\n",
     "from utils.model_utils import load_model_and_processor\n",
-    "import config.config_medgemma_4b_it_nct_crc_he as config_medgemma_4b_it_nct_crc_he\n",
-    "from peft_medgemma_4b_it_nct_crc_he import fine_tune_medgemma_nct_crc_he\n",
+    "import config.config_medgemma_4b_it_brain_mri as config_medgemma_4b_it_brain_mri\n",
+    "from peft_medgemma_4b_it_brain_mri import fine_tune_medgemma_brain_mri\n",
     "\n",
     "# Format the dataset\n",
     "formatted_dataset = dataset.map(format_data_medgemma_nct_crc_he)\n",
     "\n",
     "# Load base model and processor\n",
     "base_model, processor = load_model_and_processor(\n",
-    "    model_id=config_medgemma_4b_it_nct_crc_he.base_model_id,\n",
-    "    model_directory=config_medgemma_4b_it_nct_crc_he.model_folder_base,\n",
-    "    model_kwargs=config_medgemma_4b_it_nct_crc_he.model_kwargs,\n",
+    "    model_id=config_medgemma_4b_it_brain_mri.base_model_id,\n",
+    "    model_directory=config_medgemma_4b_it_brain_mri.model_folder_base,\n",
+    "    model_kwargs=config_medgemma_4b_it_brain_mri.model_kwargs,\n",
     ")"
    ]
   },
@@ -361,14 +361,14 @@
    ],
    "source": [
     "# Fine-tune the model\n",
-    "fine_tune_medgemma_nct_crc_he(\n",
+    "fine_tune_medgemma_brain_mri(\n",
     "    model=base_model,\n",
     "    processor=processor,\n",
     "    data=formatted_dataset,\n",
-    "    base_model_directory=config_medgemma_4b_it_nct_crc_he.model_folder_base,\n",
-    "    save_directory_adapters=config_medgemma_4b_it_nct_crc_he.model_folder_crc_ft_adapter,\n",
-    "    save_directory_full_model=config_medgemma_4b_it_nct_crc_he.model_folder_crc_ft_full,\n",
-    "    model_kwargs=config_medgemma_4b_it_nct_crc_he.model_kwargs,\n",
+    "    base_model_directory=config_medgemma_4b_it_brain_mri.model_folder_base,\n",
+    "    save_directory_adapters=config_medgemma_4b_it_brain_mri.model_folder_bmri_ft_adapter,\n",
+    "    save_directory_full_model=config_medgemma_4b_it_brain_mri.model_folder_bmri_ft_full,\n",
+    "    model_kwargs=config_medgemma_4b_it_brain_mri.model_kwargs,\n",
     ")"
    ]
   },
@@ -409,15 +409,15 @@
     }
    ],
    "source": [
-    "from test_medgemma_49_it_nct_crc_he import test_medgemma_4b_it_nct_crc_he\n",
+    "from test_medgemma_4b_it_brain_mri import test_medgemma_4b_it_brain_mri\n",
     "from utils.prompt_utils import make_prompt_without_image\n",
-    "import config.config_medgemma_4b_it_nct_crc_he as config_medgemma_4b_it_nct_crc_he\n",
+    "import config.config_medgemma_4b_it_brain_mri as config_medgemma_4b_it_brain_mri\n",
     "\n",
     "\n",
-    "test_instance_base = test_medgemma_4b_it_nct_crc_he(\n",
-    "    model_id=config_medgemma_4b_it_nct_crc_he.base_model_id,\n",
-    "    model_folder=config_medgemma_4b_it_nct_crc_he.model_folder_base,\n",
-    "    model_kwargs=config_medgemma_4b_it_nct_crc_he.model_kwargs,\n",
+    "test_instance_base = test_medgemma_4b_it_brain_mri(\n",
+    "    model_id=config_medgemma_4b_it_brain_mri.base_model_id,\n",
+    "    model_folder=config_medgemma_4b_it_brain_mri.model_folder_base,\n",
+    "    model_kwargs=config_medgemma_4b_it_brain_mri.model_kwargs,\n",
     "    max_new_tokens=500\n",
     ")"
    ]
@@ -449,11 +449,11 @@
    ],
    "source": [
     "messages = make_prompt_without_image(\n",
-    "        system_message=config_medgemma_4b_it_nct_crc_he.prompt_template[\"system_message\"],\n",
-    "        user_prompt=config_medgemma_4b_it_nct_crc_he.prompt_template[\"user_prompt\"])\n",
-    "print(f\"System Message:{config_medgemma_4b_it_nct_crc_he.prompt_template['system_message']}\")\n",
-    "print(f\"User Message:{config_medgemma_4b_it_nct_crc_he.prompt_template['user_prompt']}\")\n",
-    "print(f\"True finding:{config_medgemma_4b_it_nct_crc_he.condition_findings[dataset['test'][-6]['label']]}\")"
+    "        system_message=config_medgemma_4b_it_brain_mri.prompt_template[\"system_message\"],\n",
+    "        user_prompt=config_medgemma_4b_it_brain_mri.prompt_template[\"user_prompt\"])\n",
+    "print(f\"System Message:{config_medgemma_4b_it_brain_mri.prompt_template['system_message']}\")\n",
+    "print(f\"User Message:{config_medgemma_4b_it_brain_mri.prompt_template['user_prompt']}\")\n",
+    "print(f\"True finding:{config_medgemma_4b_it_brain_mri.condition_findings[dataset['test'][-6]['label']]}\")"
    ]
   },
   {
@@ -572,10 +572,10 @@
     }
    ],
    "source": [
-    "test_instance_peft = test_medgemma_4b_it_nct_crc_he(\n",
+    "test_instance_peft = test_medgemma_4b_it_brain_mri(\n",
     "    model_id=\"peft\",\n",
-    "    model_folder=config_medgemma_4b_it_nct_crc_he.model_folder_crc_ft_full,\n",
-    "    model_kwargs=config_medgemma_4b_it_nct_crc_he.model_kwargs,\n",
+    "    model_folder=config_medgemma_4b_it_brain_mri.model_folder_bmri_ft_full,\n",
+    "    model_kwargs=config_medgemma_4b_it_brain_mri.model_kwargs,\n",
     "    max_new_tokens=500\n",
     ")\n",
     "messages = make_prompt_without_image(\n",
@@ -701,14 +701,13 @@
     }
    ],
    "source": [
-    "augmented_user_prompt = (config_medgemma_4b_it_nct_crc_he.prompt_template[\"user_prompt\"]\n",
-    "                             + f\"\\nIn your answer, please consider that a fine-tuned model ML model on \"\n",
-    "                               f\"\\nhematoxylin & eosin stained histological images of human colorectal \"\n",
-    "                               f\"\\ncancer (CRC) and normal tissue has predicted  **{ft_assistant_message}**  in this case. \"\n",
+    "augmented_user_prompt = (config_medgemma_4b_it_brain_mri.prompt_template[\"user_prompt\"]\n",
+    "                             + f\"\\nIn your answer, please consider that a fine-tuned model ML model on brain MRI data\"\n",
+    "                               f\"\\n does predict the label **{ft_assistant_message}**  in this case. \"\n",
     "                               f\"\\nProvide a detailed explanation for your diagnosis.\")\n",
     "    \n",
     "augmented_messages = make_prompt_without_image(\n",
-    "        system_message=config_medgemma_4b_it_nct_crc_he.prompt_template[\"system_message\"],\n",
+    "        system_message=config_medgemma_4b_it_brain_mri.prompt_template[\"system_message\"],\n",
     "        user_prompt=augmented_user_prompt)\n",
     "# augmented_assistant_message = test_instance_base.chat(augmented_messages)\n",
     "augmented_assistant_message = test_instance_base.chat_v1(augmented_messages, dataset[\"test\"][-6][\"image\"])\n",
